# cplayer

./: .gitignore  .pre-commit-config.yaml  .prospector.yml  .ruff.toml  LICENSE  MANIFEST.in  README.md  app.py  application.css  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.githooks/: pre-commit  pre-push  pre-push.sh
components/hidden_widget/: widget.py
components/input_label/: styles.css  widget.py
components/notification/: styles.css  widget.py
components/options_list/: styles.css  widget.py
components/playlist/: widget.py
components/progress_bar/: styles.css  widget.py
components/volume_bar/: styles.css  widget.py
cplayer/: __init__.py  __main__.py  main.py
cplayer/documentation/: help.md
cplayer/resources/config/: default.yaml
cplayer/resources/styles/: application.css
cplayer/src/: __init__.py
cplayer/src/components/file_explorer/: __init__.py  styles.css
cplayer/src/components/hidden_widget/: __init__.py
cplayer/src/components/input_label/: __init__.py  styles.css
cplayer/src/components/notification/: __init__.py  styles.css
cplayer/src/components/options_list/: __init__.py  styles.css
cplayer/src/components/progress_bar/: __init__.py
cplayer/src/components/status_song/: __init__.py  styles.css
cplayer/src/components/tracklist/: __init__.py  styles.css
cplayer/src/components/volume_bar/: __init__.py
cplayer/src/elements/: __init__.py  config.py  downloader.py  playlist.py
cplayer/src/pages/: __init__.py
cplayer/src/pages/base/: __init__.py  styles.css
cplayer/src/pages/help/: __init__.py
cplayer/src/pages/home/: __init__.py  styles.css
cplayer/src/utils/: singleton.py
documentation/: help.md
pages/help/: page.py
pages/home/: page.py
resources/config/: default.yml
resources/styles/: application.css
src/components/file_explorer/: __init__.py  styles.css
src/components/hidden_widget/: __init__.py  widget.py
src/components/input_label/: __init__.py  widget.py
src/components/notification/: __init__.py  styles.css  widget.py
src/components/options_list/: __init__.py  styles.css  widget.py
src/components/playlist/: widget.py
src/components/progress_bar/: __init__.py  styles.css  widget.py
src/components/tracklist/: __init__.py  styles.css
src/components/volume_bar/: __init__.py  styles.css  widget.py
src/elements/: config.py  playlist.py
src/pages/base/: __init__.py  page.py
src/pages/help/: __init__.py  page.py  styles.css
src/pages/home/: __init__.py  page.py
src/utils/: singleton.py
tests/: options.py  uninstall.py
